Bug 753256 Use [NSEvent modifierFlags] or convert the result of GetCurrentKeyModifiers() to cocoa flags at getting current modifier state r=smichaud